Fix right scrollbar padding issue

--- a/styles/email-frame.less
+++ b/styles/email-frame.less
@@ -3,6 +3,12 @@
 	background: @arc-dark;
 }
 
+#sheet-container {
+	background: none !important;
+	margin-right: -6px;
+	padding-right: 6px;
+}
+
 #message-list {
 	.footer-reply-area-wrap {
 		background: transparent;
@@ -133,6 +139,7 @@
 .column-MessageListSidebar {
 	border: none;
 	color: @arc-light;
+	margin-right: 6px;
 	div[name=unsafe-component-wrapper] {
 		order: 2 !important;
 	}
